# video_system

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_test.sh  check_environment.sh  debug_cmake.sh  fix_build.sh  fix_dependencies.sh  quick_build.sh  step_by_step_test.sh
server/: CMakeLists.txt  benchmark.py  system_check.py  test_video_system.py  ultimate_fix.sh
server/include/server/: Connection.hpp  ConnectionManager.hpp  Epoll.hpp  Request.hpp  Response.hpp  Server.hpp  Socket.hpp  ThreadPool.hpp  ThreadPool_impl.hpp  VideoServerAdapter.hpp
server/include/tasks/: TaskManager.hpp
server/include/video/: VideoFormatUnifier.hpp  VideoProcessor.hpp
server/src/: main.cpp
server/src/server/: Connection.cpp  ConnectionManager.cpp  Epoll.cpp  Request.cpp  Response.cpp  Server.cpp  Socket.cpp  ThreadPool.cpp  VideoServerAdapter.cpp
server/src/tasks/: TaskManager.cpp
server/src/video/: VideoFormatUnifier.cpp  VideoProcessor.cpp
server/test/: task_manager_test.cpp  task_test  video_processor_test.cpp
shared/: protocol.h
tests/: test_opencv_qt.cpp
